horizotal product showing

--- a/src/components/products/Products.module.css
+++ b/src/components/products/Products.module.css
@@ -34,3 +34,29 @@
     color: var(--pink);
     cursor: pointer;
 }
+
+.list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    height: 25rem;
+    overflow-y: scroll;
+    gap: 2rem;
+    justify-content: space-between;
+}
+
+.product {
+    width: 12rem;
+    height: 8rem;
+    background-color: white;
+    position: relative;
+    overflow: hidden;
+    padding: 1rem 2rem;
+    display: flex;
+    border-radius: 1rem;
+}
+
+.product>img {
+    top: 3rem;
+    width: 6rem;
+    height: 11rem;
+}
