--- a/src/components/testimonial/Testimonials.module.css
+++ b/src/components/testimonial/Testimonials.module.css
@@ -41,3 +41,52 @@
 .wrapper> :nth-child(3) {
     text-align: right;
 }
+
+.reviews {
+    font-size: 2rem;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.carousal {
+    width: 100%;
+}
+
+.Tcarousal {
+    padding: 2rem;
+}
+
+.testimonial {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    background: white;
+    border-radius: 0.5rem;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    gap: 1rem;
+    box-shadow: 0rem 1rem 3rem -50px #7d7d7d;
+}
+
+.testimonial>img {
+    position: absolute;
+    top: -1.5rem;
+    width: 3rem;
+    /* left: 45%; */
+}
+
+.testimonial>span:nth-of-type(1) {
+    align-items: center;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+    margin-top: 2rem;
+    text-align: center;
+}
+
+.testimonial>hr {
+    height: 1px;
+    width: 80%;
+    background: rgb(198, 198, 198);
+    border: none;
+}
